--- a/assignment10/Blank1200px.css
+++ b/assignment10/Blank1200px.css
@@ -64,7 +64,7 @@ header {
 }
 
 h1 {
-  font-family: "Uncial Antiqua", system-ui;
+  font-family: "Uncial Antiqua", sans-serif;
   font-weight: 400;
   font-style: normal;
   color: #287562;
